manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-label          # метка, придумай значение, например hello
  template:
    metadata:
      labels:
        app: hello-label        # то же значение, что в selector
    spec:
      containers:
        - name: hello-container
          image: allihusha/k8s:latest
          ports:
            - containerPort: 8080
