manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello-label
  ports:
    - port: 80
      targetPort: 8080
